update nav links

--- a/src/components/blocks/Navbar.astro
+++ b/src/components/blocks/Navbar.astro
@@ -2,22 +2,22 @@
 const navLinks = [
 	{
 		name: "Projects",
-		href: "#projects",
+		href: "/#projects",
 		title: "See all projects",
 	},
 	{
 		name: "Process",
-		href: "#process",
+		href: "/#process",
 		title: "Learn more about my process",
 	},
 	{
 		name: "About",
-		href: "#about",
+		href: "/#about",
 		title: "Learn more about me",
 	},
 	{
 		name: "Experience",
-		href: "#experience",
+		href: "/#experience",
 		title: "Learn more about my experience",
 	},
 	// {
