--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -36,12 +36,12 @@ import cosWebsite from "../assets/images/work/cos-website/project-screenshot.png
 // 	},
 // ];
 
-//class="group grid gap-y-8 before:absolute before:-inset-x-4 before:-top-4 before:bottom-0 before:z-0 before:border before:border-solid before:border-transparent before:p-4 before:transition before:duration-300 before:ease-in-out hover:before:border-gray-200"
+//class="group grid gap-y-8 before:absolute before:-inset-x-4 before:-top-4 before:bottom-0 before:z-0 before:border before:border-solid before:border-transparent before:p-4 before:transition before:duration-300 before:ease-in-out hover:before:border-slate-200"
 ---
 
 <LargeContainer>
 	<div class="grid gap-y-16 pb-24">
-		<a href="" class="grid gap-y-8">
+		<a href="/headline-studio-app" class="grid gap-y-8">
 			<div
 				class="overflow-hidden bg-[#dfe8f9] px-6 pt-4 transition duration-300 ease-in-out hover:scale-102 md:px-10 md:pt-8"
 			>
