--- a/src/components/blocks/Footer.astro
+++ b/src/components/blocks/Footer.astro
@@ -32,7 +32,7 @@ const footerLinks = [
 						href={link.href}
 						title={link.title}
 						rel="noopener noreferrer nofollow"
-						class="block transition duration-300 hover:bg-gray-200 md:px-3 md:py-3 lg:py-4"
+						class="block transition duration-300 hover:bg-slate-200 md:px-3 md:py-3 lg:py-4"
 					>
 						{link.name}
 					</a>
