--- a/src/components/blocks/Navbar.astro
+++ b/src/components/blocks/Navbar.astro
@@ -29,7 +29,7 @@ const navLinks = [
 ---
 
 <nav
-	class="relative grid border-t border-solid border-black bg-white/70 px-4 py-4 text-sm backdrop-blur-md before:absolute before:-top-1 before:block before:h-1 before:w-full before:bg-waikawa-gray-500 md:grid-cols-12 md:border-b md:border-t-0 md:py-0 lg:px-8"
+	class="relative grid border-t border-solid border-black bg-white/70 px-4 py-4 text-sm backdrop-blur-md before:absolute before:-top-1 before:block before:h-1 before:w-full before:bg-slate-500 md:grid-cols-12 md:border-b md:border-t-0 md:py-0 lg:px-8"
 >
 	<a
 		href="/"
@@ -46,7 +46,7 @@ const navLinks = [
 					<a
 						href={link.href}
 						title={link.title}
-						class="block transition duration-300 hover:bg-gray-900 hover:text-white md:px-3 md:py-3 lg:py-4"
+						class="block transition duration-300 hover:bg-slate-900 hover:text-white md:px-3 md:py-3 lg:py-4"
 					>
 						{link.name}
 					</a>
