--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,12 +25,12 @@ import Experience from "../components/Experience.astro";
 		<SectionContainer>
 			<Projects />
 		</SectionContainer>
-		<SectionContainer bgColor="bg-gray-100">
+		<SectionContainer bgColor="bg-slate-100">
 			<div class="py-24" id="process">
 				<Process />
 			</div>
 		</SectionContainer>
-		<SectionContainer bgColor="bg-gray-900">
+		<SectionContainer bgColor="bg-slate-800">
 			<LargeContainer>
 				<figure class="grid gap-y-4 py-16 text-white">
 					<blockquote>
@@ -53,7 +53,7 @@ import Experience from "../components/Experience.astro";
 			</div>
 		</SectionContainer>
 
-		<SectionContainer bgColor="bg-gray-100">
+		<SectionContainer bgColor="bg-slate-100">
 			<div class="py-24" id="experience">
 				<Experience />
 			</div>
@@ -63,7 +63,7 @@ import Experience from "../components/Experience.astro";
 				<Books />
 			</div>
 		</SectionContainer>
-		<SectionContainer bgColor="bg-gray-900">
+		<SectionContainer bgColor="bg-slate-800">
 			<LargeContainer>
 				<figure class="grid gap-y-4 py-16 text-white">
 					<blockquote>
