--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -6,7 +6,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 
 <LargeContainer>
 	<div class="grid gap-y-1">
-		<div class="font-mono-space leading-normal text-gray-600">About</div>
+		<div class="font-mono-space leading-normal text-slate-600">About</div>
 		<h2 class="text-4xl font-medium leading-normal">
 			<!-- What drives great product design -->
 			My design philosophy
