--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,14 +6,16 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 <LargeContainer>
 	<div class="grid gap-y-16">
 		<div class="grid gap-y-1">
-			<div class="font-mono-space leading-normal text-gray-600">Experience</div>
+			<div class="font-mono-space leading-normal text-slate-600">
+				Experience
+			</div>
 			<h2 class="text-4xl font-medium leading-normal">Where I've worked</h2>
 		</div>
 		<SmallContainer>
 			<div class="grid gap-y-16">
 				<div>
 					<div
-						class="mb-8 grid items-center gap-x-3 border-b border-solid border-gray-300 pb-2 md:grid-cols-[auto_1fr_auto]"
+						class="mb-8 grid items-center gap-x-3 border-b border-solid border-slate-300 pb-2 md:grid-cols-[auto_1fr_auto]"
 					>
 						<svg
 							class="w-12"
@@ -25,7 +27,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 								style={{ fill: "#d4765d" }}></path>
 						</svg>
 						<h3 class="text-xl font-medium">CoSchedule</h3>
-						<p class="text-sm text-gray-600">4+ years</p>
+						<p class="text-sm text-slate-600">4+ years</p>
 					</div>
 					<ul class="grid gap-y-10">
 						<li class="grid gap-y-4 md:grid-cols-[1fr_2fr] md:gap-x-6">
@@ -34,7 +36,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 							>
 								<h4 class="font-medium leading-loose">Product Designer</h4>
 								<p
-									class="justify-self-end text-xs leading-loose text-gray-600 md:justify-self-auto"
+									class="justify-self-end text-xs leading-loose text-slate-600 md:justify-self-auto"
 								>
 									April 2022 &bull; Present
 								</p>
@@ -58,7 +60,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 							>
 								<h4 class="font-medium leading-loose">Web Designer</h4>
 								<p
-									class="justify-self-end text-xs leading-loose text-gray-600 md:justify-self-auto"
+									class="justify-self-end text-xs leading-loose text-slate-600 md:justify-self-auto"
 								>
 									April 2021 &bull; April 2022
 								</p>
@@ -83,7 +85,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 							>
 								<h4 class="font-medium leading-loose">Jr Web Designer</h4>
 								<p
-									class="justify-self-end text-xs leading-loose text-gray-600 md:justify-self-auto"
+									class="justify-self-end text-xs leading-loose text-slate-600 md:justify-self-auto"
 								>
 									April 2020 &bull; April 2021
 								</p>
@@ -107,7 +109,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 							>
 								<h4 class="font-medium leading-loose">Graphic Design Intern</h4>
 								<p
-									class="justify-self-end text-xs leading-loose text-gray-600 md:justify-self-auto"
+									class="justify-self-end text-xs leading-loose text-slate-600 md:justify-self-auto"
 								>
 									April 2019 &bull; April 2020
 								</p>
@@ -129,7 +131,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 				</div>
 				<div>
 					<div
-						class="mb-8 grid items-center gap-x-3 border-b border-solid border-gray-300 pb-2 md:grid-cols-[auto_1fr_auto]"
+						class="mb-8 grid items-center gap-x-3 border-b border-solid border-slate-300 pb-2 md:grid-cols-[auto_1fr_auto]"
 					>
 						<svg
 							class="w-12"
@@ -148,7 +150,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 								style={{ fill: "#53a8dd" }}></path>
 						</svg>
 						<h3 class="text-xl font-medium">Dynamic Communities</h3>
-						<p class="text-sm text-gray-600">1 year 2 months</p>
+						<p class="text-sm text-slate-600">1 year 2 months</p>
 					</div>
 					<ul class="grid gap-y-10">
 						<li class="grid gap-y-4 md:grid-cols-[1fr_2fr] md:gap-x-6">
@@ -157,7 +159,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 							>
 								<h4 class="font-medium leading-loose">Marketing Intern</h4>
 								<p
-									class="justify-self-end text-xs leading-loose text-gray-600 md:justify-self-auto"
+									class="justify-self-end text-xs leading-loose text-slate-600 md:justify-self-auto"
 								>
 									January 2018 &bull; March 2019
 								</p>
