--- a/src/components/Process.astro
+++ b/src/components/Process.astro
@@ -3,17 +3,17 @@ import LargeContainer from "./foundation/LargeContainer.astro";
 import SmallContainer from "./foundation/SmallContainer.astro";
 
 const h3 = "text-xl font-medium";
-const p = "mb-4 border-b border-solid border-gray-300 pb-4 leading-relaxed";
+const p = "mb-4 border-b border-solid border-slate-300 pb-4 leading-relaxed";
 const ul = "flex flex-wrap gap-x-2 text-sm";
 const li =
-	"flex items-center gap-x-2 after:inline-block after:h-1 after:w-1 after:rounded-sm after:bg-gray-600 text-gray-600";
-const liLast = "text-gray-600";
+	"flex items-center gap-x-2 after:inline-block after:h-1 after:w-1 after:rounded-sm after:bg-slate-600 text-slate-600";
+const liLast = "text-slate-600";
 ---
 
 <LargeContainer>
 	<div class="grid gap-y-16">
 		<div class="grid gap-y-1">
-			<div class="font-mono-space leading-normal text-gray-600">Process</div>
+			<div class="font-mono-space leading-normal text-slate-600">Process</div>
 			<h2 class="text-4xl font-medium leading-normal">End-to-end design</h2>
 			<p class="leading-normal">
 				As a designer I’m involved in all parts of the product development
