--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
 <!DOCTYPE html>
 <html
 	lang="en"
-	class="bg-waikawa-gray-500 font-sans-serif leading-normal text-gray-950"
+	class="bg-slate-500 font-sans-serif leading-normal text-slate-950"
 >
 	<head>
 		<meta charset="UTF-8" />
