--- a/src/pages/mychart.astro
+++ b/src/pages/mychart.astro
@@ -34,7 +34,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 						</p>
 					</div>
 					<aside
-						class="border-t border-solid border-gray-300 pt-6 text-sm leading-loose text-gray-600 lg:justify-self-end lg:border-0 lg:pt-0 lg:text-base"
+						class="border-t border-solid border-slate-300 pt-6 text-sm leading-loose text-slate-600 lg:justify-self-end lg:border-0 lg:pt-0 lg:text-base"
 					>
 						<ul class="grid gap-y-2 md:grid-cols-2 lg:grid-cols-1">
 							<li>
@@ -43,7 +43,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 								>
 								<ul class="flex flex-wrap items-baseline gap-x-2">
 									<li
-										class="flex items-center gap-x-2 after:inline-block after:h-1 after:w-1 after:rounded-sm after:bg-gray-600"
+										class="flex items-center gap-x-2 after:inline-block after:h-1 after:w-1 after:rounded-sm after:bg-slate-600"
 									>
 										Research
 									</li>
@@ -56,7 +56,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 								>
 								<ul class="flex flex-wrap items-baseline gap-x-2">
 									<li
-										class="flex items-center gap-x-2 after:inline-block after:h-1 after:w-1 after:rounded-sm after:bg-gray-600"
+										class="flex items-center gap-x-2 after:inline-block after:h-1 after:w-1 after:rounded-sm after:bg-slate-600"
 									>
 										Google docs
 									</li>
@@ -71,7 +71,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 		<div class="-mt-20 leading-loose lg:-mt-28">
 			<SectionContainer>
 				<LargeContainer>
-					<div class="bg-white p-4 md:py-10">
+					<div class="bg-white p-4 md:pb-20 md:pt-10">
 						<SmallContainer>
 							<div class="grid gap-y-4">
 								<p class="lg:text-lg lg:leading-loose">
@@ -90,10 +90,10 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 									aligning with the brand's guidelines and requirements.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
-									Introduction
+									About MyChart
 								</h2>
 								<p>
-									MyChart by Epic, a web portal that allows patients to manage
+									MyChart by Epic is a web portal that allows patients to manage
 									all their healthcare needs. With MyChart patients can access
 									health information including: medications, test results,
 									upcoming appointments, medical bills, and price estimates.
