add coschedule page

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -9,7 +9,7 @@ import SmallContainer from "./foundation/SmallContainer.astro";
 			<div class="font-mono-space leading-normal text-slate-600">
 				Experience
 			</div>
-			<h2 class="text-4xl font-medium leading-normal">Where I've worked</h2>
+			<h2 class="text-4xl font-medium leading-normal">My design journey</h2>
 		</div>
 		<SmallContainer>
 			<div class="grid gap-y-16">
