--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -103,7 +103,7 @@ import cosWebsite from "../assets/images/work/cos-website/project-screenshot.png
 				</div>
 			</SmallContainer>
 		</a>
-		<a href="" class="grid gap-y-8">
+		<a href="/coschedule" class="grid gap-y-8">
 			<div
 				class="overflow-hidden bg-[#fde5df] px-6 pt-4 transition duration-300 ease-in-out hover:scale-102 md:px-10 md:pt-8"
 			>
@@ -167,7 +167,7 @@ import cosWebsite from "../assets/images/work/cos-website/project-screenshot.png
 				</div>
 			</SmallContainer>
 		</a>
-		<a href="" class="grid gap-y-8">
+		<!-- <a href="" class="grid gap-y-8">
 			<div
 				class="overflow-hidden bg-[#dfe8f9] px-6 pt-4 transition duration-300 ease-in-out hover:scale-102 md:px-10 md:pt-8"
 			>
@@ -198,6 +198,6 @@ import cosWebsite from "../assets/images/work/cos-website/project-screenshot.png
 					</div>
 				</div>
 			</SmallContainer>
-		</a>
+		</a> -->
 	</div>
 </LargeContainer>
