--- a/src/pages/headline-studio-app.astro
+++ b/src/pages/headline-studio-app.astro
@@ -63,7 +63,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									<li
 										class="flex items-center gap-x-2 after:inline-block after:h-1 after:w-1 after:rounded-sm after:bg-slate-600"
 									>
-										Google docs
+										Google Docs
 									</li>
 									<li
 										class="flex items-center gap-x-2 after:inline-block after:h-1 after:w-1 after:rounded-sm after:bg-slate-600"
@@ -75,7 +75,17 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									>
 										VS Code
 									</li>
-									<li>HTML & SCSS</li>
+									<li
+										class="flex items-center gap-x-2 after:inline-block after:h-1 after:w-1 after:rounded-sm after:bg-slate-600"
+									>
+										HTML & SCSS
+									</li>
+									<li
+										class="flex items-center gap-x-2 after:inline-block after:h-1 after:w-1 after:rounded-sm after:bg-slate-600"
+									>
+										Hotjar
+									</li>
+									<li>Metabase</li>
 								</ul>
 							</li>
 						</ul>
@@ -280,7 +290,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									<li>Tony S.</li>
 								</ul>
 								<p class="pt-8 text-sm italic text-slate-600">
-									Headline Studio is a trademark of CoSchedule. All rights
+									Headline Studio is a property of CoSchedule. All rights
 									reserved.
 								</p>
 							</div>
