--- a/src/components/blocks/Footer.astro
+++ b/src/components/blocks/Footer.astro
@@ -14,7 +14,7 @@ const footerLinks = [
 ---
 
 <footer
-	class="grid gap-y-4 border-t border-solid border-black bg-white px-4 py-4 text-xs md:grid-cols-12 md:py-0 lg:px-8 lg:text-sm"
+	class="grid gap-y-4 border-t border-solid border-slate-600 bg-white px-4 py-4 text-xs md:grid-cols-12 md:py-0 lg:px-8 lg:text-sm"
 >
 	<p class="text-center md:col-span-10 md:py-3 md:text-left lg:py-4">
 		Designed &amp; built by Samantha Albrecht &bull; Copyright &#169; {
