--- a/src/pages/mychart.astro
+++ b/src/pages/mychart.astro
@@ -20,7 +20,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 				<div
 					class="grid gap-y-6 px-4 md:gap-x-8 md:px-0 lg:grid-cols-[3fr_1fr] lg:gap-x-16"
 				>
-					<div class="grid gap-y-2 lg:gap-y-4">
+					<div class="grid content-start gap-y-2 lg:gap-y-4">
 						<h1
 							class="text-3xl font-medium leading-normal md:text-4xl md:leading-normal lg:text-5xl"
 						>
@@ -58,7 +58,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 									<li
 										class="flex items-center gap-x-2 after:inline-block after:h-1 after:w-1 after:rounded-sm after:bg-slate-600"
 									>
-										Google docs
+										Google Docs
 									</li>
 									<li>Figma</li>
 								</ul>
@@ -71,7 +71,7 @@ import SectionContainer from "../components/foundation/SectionContainer.astro";
 		<div class="-mt-20 leading-loose lg:-mt-28">
 			<SectionContainer>
 				<LargeContainer>
-					<div class="bg-white p-4 md:pb-20 md:pt-10">
+					<div class="bg-white px-4 pb-12 pt-4 md:pb-20 md:pt-10">
 						<SmallContainer>
 							<div class="grid gap-y-4">
 								<p class="lg:text-lg lg:leading-loose">
