--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -135,7 +135,7 @@ import cosWebsite from "../assets/images/work/cos-website/project-screenshot.png
 				</div>
 			</SmallContainer>
 		</a>
-		<a href="" class="grid gap-y-8">
+		<a href="/actionable-marketing-institute" class="grid gap-y-8">
 			<div
 				class="overflow-hidden bg-violet-200 px-6 pt-4 transition duration-300 ease-in-out hover:scale-102 md:px-10 md:pt-8"
 			>
