--- a/src/pages/headline-studio-app.astro
+++ b/src/pages/headline-studio-app.astro
@@ -73,11 +73,6 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									<li
 										class="flex items-center gap-x-2 after:inline-block after:h-1 after:w-1 after:rounded-sm after:bg-slate-600"
 									>
-										VS Code
-									</li>
-									<li
-										class="flex items-center gap-x-2 after:inline-block after:h-1 after:w-1 after:rounded-sm after:bg-slate-600"
-									>
 										HTML & SCSS
 									</li>
 									<li
@@ -100,7 +95,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 						<SmallContainer>
 							<div class="grid gap-y-4">
 								<p class="lg:text-lg lg:leading-loose">
-									This case study will explore the design and development
+									This project summary will explore the design and development
 									process behind Headline AI. A powerful feature in Headline
 									Studio that uses Natural Language Processing and other AI
 									techniques to generate a variety of headline styles, tones,
@@ -115,10 +110,7 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									their headlines, and ultimately drive more traffic and
 									engagement to their content. The tool combines artificial
 									intelligence and data-driven analysis to provide users with
-									insights on headline performance and SEO optimization. By
-									using Headline Studio, content creators can save time and
-									streamline their writing process, as well as receive valuable
-									feedback on their headline ideas.
+									insights on headline performance and SEO optimization.
 								</p>
 								<h2 class="pt-8 text-2xl font-medium lg:text-3xl">
 									What problem are we solving?
@@ -147,12 +139,14 @@ import SmallContainer from "../components/foundation/SmallContainer.astro";
 									with the generated headlines, including copying, editing, and
 									analyzing. Ultimately, after careful consideration, our team
 									decided that a chat interface was the most user-friendly and
-									familiar option. For the MVP, we kept the interface simple
-									with just a button to analyze the headline, as additional
-									options would have added unnecessary complexity. The chat
-									interface effectively communicates a back-and-forth
-									brainstorming tool and provides flexibility for future
-									developments of this feature.
+									familiar option.
+								</p>
+								<p>
+									For the MVP, we kept the interface simple with just a button
+									to analyze the headline, as additional options would have
+									added unnecessary complexity. The chat interface effectively
+									communicates a back-and-forth brainstorming tool and provides
+									flexibility for future developments of this feature.
 								</p>
 								<h3 class="pt-8 text-xl font-medium lg:text-2xl">Design</h3>
 								<p>
